--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,300&display=swap");
 @layer base {
 }
 
@@ -14,4 +15,17 @@ body {
 .react-multi-carousel-dot {
   width: 10px;
   background-color: aqua;
+}
+
+.backround-image::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  z-index: 1;
+  background: linear-gradient(180deg, rgba(19, 23, 32, 0.5) 0%, #131720 100%);
+  pointer-events: none;
 }
